[package]
name = "hyprtxt"
version = "0.1.1"
description = "A simple HTML templating macro."
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["templating", "macro", "html"]
categories = ["template-engine"]
homepage = "https://github.com/adabarx/hyprtxt"
repository = "https://github.com/adabarx/hyprtxt"
readme = "README.md"
authors = ["Ada <adaminabarx@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full", "extra-traits"]}
